bullet_ws/log/build_2025-10-15_21-44-25/sim/stderr.log
  File "/home/arepo/vsss_sim/bullet_ws/install/sim/lib/python3.10/site-packages/sim/gui.py", line 85
    exposure_label.pack(anchor=tk.CENTER)x
                                         ^
SyntaxError: invalid syntax

  File "/home/arepo/vsss_sim/bullet_ws/install/sim/lib/python3.10/site-packages/sim/vision.py", line 545
    "y": 999.
         ^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

